--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -33,5 +33,5 @@
   {% if author.weibo %}<a href="http://www.weibo.com/{{ author.weibo }}" class="author-social" target="_blank"><i class="fa fa-fw fa-weibo"></i> Weibo</a>{% endif %}
   {% if author.flickr %}<a href="http://www.flickr.com/{{ author.flickr }}" class="author-social" target="_blank"><i class="fa fa-fw fa-flickr"></i> Flickr</a>{% endif %}
   {% if author.codepen %}<a href="http://codepen.io/{{ author.codepen }}" class="author-social" target="_blank"><i class="fa fa-fw fa-codepen"></i> CodePen</a>{% endif %}
-  {% if author.google_scholar %}<a href="http://scholar.google.com/citations?user={{ author.google_scholar }}" class="author-social" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i>&nbsp;&nbsp;&thinsp;Scholar</a>{% endif %}
+  {% if author.google_scholar %}<a href="http://scholar.google.com/citations?user={{ author.google_scholar }}" class="author-social" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i>&thinsp;&thinsp;&thinsp;Scholar</a>{% endif %}
 </div>
